# tft-synapse

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/tft-advisor/: Cargo.toml
crates/tft-advisor/src/: advisor.rs  board_advisor.rs  carry_advisor.rs  economy_advisor.rs  export.rs  item_advisor.rs  lib.rs  metrics.rs  opponent_tracker.rs  pool_tracker.rs  positioning_advisor.rs  reasoning.rs  round_timer.rs  session.rs  shop_advisor.rs
crates/tft-capture/: Cargo.toml
crates/tft-capture/src/: lib.rs  live_api.rs  mock.rs  reader.rs  screen_capture.rs
crates/tft-data/: Cargo.toml
crates/tft-data/data/: augments.yaml  champions.yaml  items.yaml  traits.yaml
crates/tft-data/src/: catalog.rs  embed.rs  lib.rs  loader.rs
crates/tft-game-state/: Cargo.toml
crates/tft-game-state/src/: encoder.rs  features.rs  lib.rs  normalizer.rs
crates/tft-ml/: Cargo.toml
crates/tft-ml/src/: bandit.rs  lib.rs  model.rs  persistence.rs  policy.rs  trainer.rs
crates/tft-synapse/: Cargo.toml
crates/tft-synapse/src/: args.rs  lib.rs  main.rs  updater.rs
crates/tft-types/: Cargo.toml
crates/tft-types/src/: action.rs  augment.rs  champion.rs  error.rs  game_state.rs  item.rs  lib.rs  reward.rs
crates/tft-ui/: Cargo.toml
crates/tft-ui/src/: app.rs  lib.rs  overlay.rs  state.rs  theme.rs  tray.rs
crates/tft-ui/src/panels/: augment_panel.rs  carry_panel.rs  economy_panel.rs  item_panel.rs  lobby_panel.rs  mod.rs  pool_panel.rs  positioning_panel.rs  review_panel.rs  round_panel.rs  stats_panel.rs  status_bar.rs
src/: augments.yaml  config.yaml  items.yaml  main.rs  tft_suggester.py  traits.yaml
