[package]
name = "tft-advisor"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
tft-types = { path = "../tft-types" }
tft-data = { path = "../tft-data" }
tft-game-state = { path = "../tft-game-state" }
tft-ml = { path = "../tft-ml" }
tft-capture = { path = "../tft-capture" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
