[package]
name = "tft-ui"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
tft-types = { path = "../tft-types" }
tft-data = { path = "../tft-data" }
tft-advisor = { path = "../tft-advisor" }
tft-capture = { path = "../tft-capture" }
eframe = { workspace = true }
egui = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
# dirs-next: cross-platform home directory lookup for export paths
dirs-next = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
# windows: Win32 API bindings for overlay transparency and click-through
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
